--- a/WhatsApp_exercise/app/src/main/res/layout/a_welcome.xml
+++ b/WhatsApp_exercise/app/src/main/res/layout/a_welcome.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="10dip"
         android:layout_marginTop="10dip"
         android:focusable="true"
-        android:text="WhatsApp Aplication"
+        android:text="WMADsApp"
         android:textSize="28sp"/>
 
     <ImageView
@@ -22,7 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/welcomeMessageTextView"
-        android:layout_marginLeft="20dip"
         android:adjustViewBounds="true"
         android:src="@drawable/app_logo"/>
 
